# blizzard

./: .gitignore  README.md  mise.toml  pyproject.toml
.github/workflows/: gate.yml  pr.yml  push.yml  release.yml  upper-tiers.yml
docs/: ci.md  deployment.md
docs/designs/desktop/: README.md
docs/designs/mobile/: README.md  companion-flows.html  core-flows.html
docs/identity/: blizzard-identity.html  identity.md
openapi/: hub.openapi.json  runner.openapi.json
packaging/systemd/: blizzard-hub.service  blizzard-runner.service
scripts/: build-wheel.sh  ci-gate.sh
src/blizzard/: __init__.py
src/blizzard/auth_core/: __init__.py
src/blizzard/cli/: __init__.py  dev.py  host_directory.py  main.py  param_rank.py
src/blizzard/foundation/: __init__.py  assets.py  clock.py  crash.py  forwarded.py  ids.py  logging.py  process.py  web.py
src/blizzard/foundation/store/: __init__.py  engine.py  invariants.py  migrations.py  status.py  utc.py
src/blizzard/hub/: __init__.py  app.py  cli.py  cli_login.py  composition.py  config.py  runtime.py  session_store.py
src/blizzard/hub/api/: __init__.py  auth.py  auth_login.py  auth_session.py  chunks.py  decisions.py  deprecation.py  deps.py  events.py  fleet.py  graphs.py  health.py  idp.py  me.py  questions.py  queue.py  readiness.py  routes.py  runners.py  spend.py  users.py
src/blizzard/hub/auth/: __init__.py  auth_state.py  bootstrap.py  errors.py  facts.py  hashing.py  identities.py  models.py  pkce.py  service.py  sessions.py  signing.py  superuser_bootstrap.py  throttle.py  users.py
src/blizzard/hub/delivery/: __init__.py  check.py  command_runner.py  coordinator.py  forge.py  hub_node.py  workdir.py
src/blizzard/hub/domain/: __init__.py  apply.py  artifacts.py  claim.py  decisions.py  detach.py  edit.py  enrollment.py  envelope.py  facts.py  fleet.py  graph.py  graph_authoring.py  graph_lifecycle.py  graph_validation.py  ingest.py  pause.py  produces_auth.py  promote.py  questions.py  queue.py  readiness.py  registry.py  route_auth.py  stop.py  work.py
src/blizzard/hub/events/: broker.py
src/blizzard/hub/graphs/: __init__.py  default.yaml  delivery-pr-ci.yaml
src/blizzard/hub/pm/: label.py  registry.py  source.py
src/blizzard/hub/store/: __init__.py  schema.py
src/blizzard/runner/: __init__.py  app.py  cli.py  config.py  listeners.py  runtime.py
src/blizzard/runner/api/: __init__.py  artifacts.py  asks.py  attachments.py  control.py  environments.py  escalations.py  facts.py  fleet_summary.py  health.py  heartbeat.py  lease_token.py  leases.py  pm_items.py  readiness.py  requeues.py  selftests.py  session_end.py  takeovers.py  transcripts.py  workspace_prompt.py
src/blizzard/runner/auth/: federation.py  jti_cache.py  jwks_cache.py  roles.py  session.py  validate.py
src/blizzard/runner/domain/: __init__.py  attachments.py  lease_auth.py  leases.py  readiness.py  requeue.py  status.py  takeover.py
src/blizzard/runner/environments/: __init__.py  provider.py
src/blizzard/runner/harness/: __init__.py  adapter.py  preamble.py  spawn_cwd.py  usage.py  worker_settings.py
src/blizzard/runner/loop/: __init__.py  build.py  context.py  hub.py  process.py  steps.py  tick.py  worktree.py
src/blizzard/runner/selftest/: __init__.py  checks.py  model.py  scratch_git.py  service.py
src/blizzard/runner/store/: __init__.py  repository.py  (+1 more)
src/blizzard/static/: README.md
src/blizzard/tools/: __init__.py  openapi.py
src/blizzard/wire/: __init__.py  attachments.py  chunk.py  completion.py  decision.py  envelope.py  events.py  facts.py  fleet.py  graph.py  lease.py  question.py  queue.py  requeue.py  route.py  runner.py  runner_status.py  takeover.py  transcript.py  user.py
tests/: conftest.py  runner_fakes.py  support.py  test_api_deprecation.py  test_apps.py  test_artifacts_storage.py  test_ask_answer.py  test_ask_park_resume.py  test_auth_config.py  test_auth_core.py  test_auth_identity_migration.py  test_auth_login_api.py  test_auth_oauth_factory.py  test_auth_oauth_migration.py  test_auth_oauth_providers.py  test_auth_provider_immutability.py  test_auth_repositories.py  test_auth_service.py  test_auth_session.py  test_chunk_detail_aggregate.py  test_chunk_edit_api.py  test_chunk_pause.py  test_chunk_promoted_migration.py  test_chunk_status_derivation.py  test_chunk_stop.py  test_chunk_usage_derivation.py  test_chunks_api.py  test_claim_exactly_once.py  test_cli.py  test_cli_login_api.py  test_cli_login_mechanics.py  test_completion_apply.py  test_completion_assembly_attachments.py  test_config.py  test_crash_registry.py  test_cross_graph_authoring.py  test_decisions_api.py  test_default_graph.py  test_delivery_loop.py  test_detach_late_write_fence.py  (+149 more)
tests/crash/: conftest.py  support.py  test_kill9_sweep.py
tests/e2e/: conftest.py  test_acceptance_loop.py  test_ask_answer_e2e.py  test_board_browser_e2e.py  test_board_cost_live_e2e.py  test_delivery_conflict_e2e.py  test_delivery_pr_ci_e2e.py  test_escalation_e2e.py  test_event_log_e2e.py  test_gate_decision_e2e.py  test_graphs_diagram_browser_e2e.py  test_login_session_e2e.py  test_migration_e2e.py  test_post_merge_node_e2e.py  test_review_cycle_e2e.py  test_runner_federation_e2e.py  test_session_modes_e2e.py  test_spike_terminal_e2e.py
tests/journey/: conftest.py  test_journey_rehearsal.py
tests/service/: support.py  test_auth_login_service.py  test_cli_login_service.py  test_event_log_service.py  test_hub_service.py  test_idp_federation_service.py  test_parity_guard.py  test_runner_auth_service.py  test_runner_service.py  test_usage_service.py  test_wire_parity_service.py
web/: README.md  angular.json  eslint.config.js  openapi-ts.hub.config.ts  openapi-ts.runner.config.ts  package-lock.json  package.json  proxy.conf.hub.js  proxy.conf.runner.js  tsconfig.json
web/projects/fleet/: README.md  eslint.config.js  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json
web/projects/local-panel/: README.md  eslint.config.js  ng-package.json  package.json
web/projects/runner/: eslint.config.js
web/scripts/: structural-gate.js
(+446 files in other folders)
